--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.tsx",
   "scripts": {
     "build": "webpack",
+    "predeploy": "npm run prod",
+    "deploy": "gh-pages -d dist",
     "lint": "./utils/lint.sh",
     "prod": "webpack --mode production",
     "start": "webpack && webpack-dev-server --open",
@@ -19,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/MichaelDarr/chronicle-app/issues"
   },
-  "homepage": "https://github.com/MichaelDarr/chronicle-app#readme",
+  "homepage": "https://michaeldarr.github.io/chronicle-app/",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -35,6 +37,7 @@
     "css-loader": "^3.5.3",
     "eslint": "^7.1.0",
     "eslint-plugin-react": "^7.20.0",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^4.3.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
