--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://michaeldarr.github.io/chronicle-app/",
   "dependencies": {
+    "extra-watch-webpack-plugin": "^1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
